# server/controllers/index.controller.js
@@ -1,3 +1,4 @@
+const { request } = require("express");
 const pool = require("../db/db.js");
 
 const serverCheck = (req, res) => res.status(204).end();
@@ -10,20 +11,21 @@ const deleteDeviceById = async (req, res) => {
                 id
             ]
         )
+        res.status(200).json({"msg": "device successfully deleted"})
     } catch (error) {
         res.status(500).json({"msg": "internal error"})
-    }
-    res.json({"msg": "device successfully deleted"}) 
+    }   
 };
 
 const deleteMetricByDeviceId = async (req, res) =>{
-    const { id } = req.params;    
-    await pool.query(
-        "DELETE FROM metrics WHERE device_id=$1", [
-            id
-        ]
-    ) 
-    res.json({"msg": "metric successfully deleted"});
+    const { id } = req.params;
+        await pool.query(
+            "DELETE FROM metrics WHERE device_id=$1", [
+                id
+            ]
+        ) 
+        res.status(200).json({"msg": "metric successfully deleted"});   
+     
 };
 
 const getDevices = async (req, res) => {
@@ -43,7 +45,7 @@ const getDevices = async (req, res) => {
         }, {});
         return device;
     })
-    devices.length > 0 ? res.status(200).json(devices) : res.status(404).json({"msg": "do not have any device yet, please create"})
+    devices.length > 0 ? res.status(200).json(devices) : res.status(404).json({"msg": "do not have any device yet"})
 };
 
 const createDevice = async (req, res) => {
@@ -64,18 +66,22 @@ const createDevice = async (req, res) => {
 };
 
 const getMetricsByDeviceId = async (req, res) => {
-    const { id } = req.params;
-    const device = await pool.query(
-        "SELECT id FROM devices WHERE id=$1", [
-            id
-        ]
-    );
-    if (device.rows.length > 0) {
-        let metrics = await pool.query(
-            "SELECT temperature, noisiness, humidity, time FROM metrics WHERE device_id=$1", [
-                id
-            ]
-        );
+    const device_id = req.params.id;
+
+    let order_by = req.query.order_by;
+    let sort_col = order_by.split('_')[0];
+    let sort_dir = order_by.split('_')[1] || "ASC";
+    let limit = req.query.limit || null;
+    let offset = req.query.offset || null;
+
+
+    console.log(sort_col, sort_dir, limit, offset);
+
+    if (await isDeviceExists(device_id)) {
+        let metrics = await pool.query(`SELECT id, temperature, noisiness, humidity, time 
+                                        FROM metrics WHERE device_id = ${device_id} 
+                                        ORDER BY ${sort_col} ${sort_dir} LIMIT ${limit} OFFSET ${offset}`);
+        console.log(metrics.rows);
         metrics = metrics.rows.map(metric => {
             let metricKeys = Object.keys(metric);
             metricKeys.forEach(i => {
@@ -91,7 +97,7 @@ const getMetricsByDeviceId = async (req, res) => {
         });
         Object.keys(metrics).length > 0 ? res.status(200).json(metrics) : res.status(404).json({"msg": "device has not metrics"});
     } else {
-        res.status(400).json({"msg": `device with id=${id} does not exist`});
+        res.status(404).json({"msg": `device with id=${device_id} does not exist`});
     }
 };
 
@@ -103,7 +109,8 @@ const createMetricsByDeviceId = async (req, res) => {
             id
         ]
     );
-    if (device.rows.length > 0) {
+
+    if (await isDeviceExists(id)) {
         let deviceParams = await pool.query(
             "SELECT temperature_enabled, noisiness_enabled, humidity_enabled FROM devices WHERE id = $1", [
                 id
@@ -113,9 +120,16 @@ const createMetricsByDeviceId = async (req, res) => {
         let reqBodyArr = Object.entries(reqBody);
         deviceParamsArr.forEach(devParam => {
             reqBodyArr.forEach(reqParam => {
-            if (devParam[1] == false && devParam[0].includes(reqParam[0])) {
-                reqBodyArr = reqBodyArr.filter(i => i != reqParam)        
+                console.log(reqParam[0])
+                if (!(reqParam[0] == "temperature" || reqParam[0] == "humidity" || reqParam[0] == "noisiness")) {
+        
+                    res.status(404).json({"msg": "incorrect data"});
+                }
+                if (devParam[1] == false && devParam[0].includes(reqParam[0])) {
+                // reqBodyArr = reqBodyArr.filter(i => i != reqParam)
+                res.status(404).json({"msg": "incorrect data"});        
             }
+            
             })    
         });
         reqBody = reqBodyArr.reduce((acc, cur) => {
@@ -123,6 +137,7 @@ const createMetricsByDeviceId = async (req, res) => {
             return acc
         }, {});
         let {temperature, humidity, noisiness} = reqBody;
+        console.log(temperature, humidity, noisiness)
         let newMetrics = await pool.query(
             "INSERT INTO metrics (device_id, temperature, humidity, noisiness) VALUES ($1, $2, $3, $4) RETURNING *", [
                 id, temperature, humidity, noisiness
@@ -143,6 +158,18 @@ const createMetricsByDeviceId = async (req, res) => {
         res.status(400).json({"msg": `device with id=${id} does not exist`})
     }   
 };
+
+async function isDeviceExists(id) {
+    const device = await pool.query(
+        "SELECT id FROM devices WHERE id=$1", [
+            id
+        ]
+    );
+
+    if (device.rowCount > 0) return true; 
+    return false;
+}
+
 
 module.exports = {
     serverCheck,
